[package]
name = "koreanbots"
version = "2.0.2"
description = "Koreanbots API wrapper library"
repository = "https://github.com/AkiaCode/Koreanbots.rs.git"
authors = ["Catry <catry.me@gmail.com>"]
edition = "2018"
documentation = "https://github.com/AkiaCode/Koreanbots.rs#example"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11.3", features=["blocking", "json"]}
serde = { version = "1.0.126", features=["derive"]}
serde_json = "1.0.64"